Added enable-preview on Surefire Plugin