@@ -9,12 +9,6 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <!-- >= JDK 9 -->
-        <maven.compiler.release>17</maven.compiler.release>
-        <!-- < JDK 9 -->
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -35,12 +29,19 @@
                 <version>3.8.1</version>
                 <configuration>
                     <!-- overrides properties -->
-                    <source>17</source>
-                    <target>17</target>
                     <release>17</release>
 
                     <!-- To test preview features -->
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <!-- To test preview features -->
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
